--- a/BBN_Test/Repast.settings
+++ b/BBN_Test/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsFileName</string>
     <string>Repast.settings</string>
     <string>LastLoadedScenario</string>
-    <string>E:\workspaces\CRNet\BBN_Test\BBN_Test.rs</string>
+    <string>C:\Users\Karma\git\PES_BBN\BBN_Test\BBN_Test.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
